# Design_Patterns

./: README.md
strategy/: CMakeLists.txt
strategy/include/: strategy.h
strategy/src/: main.cpp  strategy.cpp
